# autoname_workspace

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  main.rs
