[package]
name = "autoname_workspaces"
version = "0.1.0"
authors = ["Julian Ospald <hasufell@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
counter = "0.4.3"
error-chain = "0.12.1"
i3ipc = "0.10.1"
lazy_static = "1.4"
log = "0.4"
regex = "1"
simple_logger = "1.5.0"
signal-hook = "0.1.13"
