[package]
name = "autoname_workspaces"
version = "0.1.0"
authors = ["Julian Ospald <hasufell@posteo.de>"]
edition = "2018"
license-file = "LICENSE"

[dependencies]
clap = "2.33.0"
counter = "0.4.3"
error-chain = "0.12.1"
i3ipc = "0.10.1"
lazy_static = "1.4"
log = "0.4"
regex = "1"
signal-hook = "0.1.13"
simple_logger = "1.5.0"
xcb = "0.9.0"
